[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/gui/Inventory.gd" type="Script" id=3]
[ext_resource path="res://sprites/inv_items/debug_bread.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/inv_items/inv_guitar.png" type="Texture" id=5]
[ext_resource path="res://sprites/inv_items/inv_bounty.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.54902, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.247059, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0.423529, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.247059, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.623529, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.05, 0.25, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0833333, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.247059, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.247059, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0.0705882, 0.0705882, 1 )

[sub_resource type="DynamicFont" id=11]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "bread",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "inv_item_bounty",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "inv_item_guitar",
"speed": 5.0
} ]

[node name="Inventory" type="Node2D"]
position = Vector2( 280, 232 )
script = ExtResource( 3 )

[node name="BG" type="Button" parent="."]
margin_right = 464.0
margin_bottom = 328.0
custom_styles/disabled = SubResource( 1 )
disabled = true

[node name="MainLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "BAT_ITEM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 600.0
margin_top = 264.0
margin_right = 720.0
margin_bottom = 312.0
theme = ExtResource( 2 )
text = "INV_CLS"

[node name="Page1" type="Node2D" parent="."]

[node name="Items" type="VBoxContainer" parent="Page1"]
margin_left = 16.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 314.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot1" type="Button" parent="Page1/Items"]
margin_right = 304.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot2" type="Button" parent="Page1/Items"]
visible = false
margin_top = 27.0
margin_right = 304.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot3" type="Button" parent="Page1/Items"]
visible = false
margin_top = 54.0
margin_right = 304.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot4" type="Button" parent="Page1/Items"]
visible = false
margin_top = 81.0
margin_right = 304.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot5" type="Button" parent="Page1/Items"]
visible = false
margin_top = 108.0
margin_right = 304.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot6" type="Button" parent="Page1/Items"]
visible = false
margin_top = 135.0
margin_right = 304.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot7" type="Button" parent="Page1/Items"]
visible = false
margin_top = 162.0
margin_right = 304.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot8" type="Button" parent="Page1/Items"]
visible = false
margin_top = 189.0
margin_right = 304.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot9" type="Button" parent="Page1/Items"]
visible = false
margin_top = 216.0
margin_right = 304.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot10" type="Button" parent="Page1/Items"]
visible = false
margin_top = 243.0
margin_right = 304.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPage" type="Button" parent="Page1"]
margin_left = 328.0
margin_top = 264.0
margin_right = 448.0
margin_bottom = 312.0
theme = ExtResource( 2 )
text = "INV_NEXTP"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevPage" type="Button" parent="Page1"]
margin_left = 328.0
margin_top = 168.0
margin_right = 448.0
margin_bottom = 216.0
theme = ExtResource( 2 )
text = "INV_PREVP"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page" type="Label" parent="Page1"]
margin_left = 328.0
margin_top = 224.0
margin_right = 448.0
margin_bottom = 256.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 10 )
text = "1/5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page2" type="Node2D" parent="."]
visible = false

[node name="ItemDescription2" type="Label" parent="Page2"]
margin_left = 488.0
margin_top = 24.0
margin_right = 792.0
margin_bottom = 136.0
theme = ExtResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestoreHPbg" type="Button" parent="Page2"]
margin_left = 16.0
margin_top = 160.0
margin_right = 136.0
margin_bottom = 216.0
custom_styles/disabled = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamName" type="Label" parent="Page2/RestoreHPbg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
theme = ExtResource( 2 )
text = "INV_RES_HP"
align = 1
valign = 1

[node name="Param" type="Label" parent="Page2/RestoreHPbg"]
margin_left = 8.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "42"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestorePPbg" type="Button" parent="Page2"]
margin_left = 16.0
margin_top = 224.0
margin_right = 136.0
margin_bottom = 280.0
custom_styles/disabled = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamName" type="Label" parent="Page2/RestorePPbg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
theme = ExtResource( 2 )
text = "INV_RES_PP"
align = 1
valign = 1

[node name="Param" type="Label" parent="Page2/RestorePPbg"]
margin_left = 8.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "42"
align = 1
valign = 1

[node name="RestoreMPbg" type="Button" parent="Page2"]
margin_left = 144.0
margin_top = 160.0
margin_right = 264.0
margin_bottom = 216.0
custom_styles/disabled = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamName" type="Label" parent="Page2/RestoreMPbg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
theme = ExtResource( 2 )
text = "INV_RES_MP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Param" type="Label" parent="Page2/RestoreMPbg"]
margin_left = 8.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "42"
align = 1
valign = 1

[node name="SpecEventBg" type="Button" parent="Page2"]
margin_left = 144.0
margin_top = 224.0
margin_right = 448.0
margin_bottom = 280.0
custom_styles/disabled = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamName" type="Label" parent="Page2/SpecEventBg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
theme = ExtResource( 2 )
text = "INV_SPEC_EV"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Param" type="Label" parent="Page2/SpecEventBg"]
margin_left = 8.0
margin_top = 32.0
margin_right = 296.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "сходу крашит всё нах))"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Page2"]
margin_left = 472.0
margin_top = 208.0
margin_right = 592.0
margin_bottom = 256.0
theme = ExtResource( 2 )
text = "GL_BACK"

[node name="Use" type="Button" parent="Page2"]
margin_left = 472.0
margin_top = 264.0
margin_right = 592.0
margin_bottom = 312.0
theme = ExtResource( 2 )
text = "INV_USE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelItemName" type="Label" parent="Page2"]
margin_left = 328.0
margin_top = 136.0
margin_right = 448.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 11 )
text = "Itemname whateverity"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="RichTextLabel" parent="Page2"]
margin_left = 16.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 152.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IcoBG" type="Button" parent="Page2"]
margin_left = 328.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 136.0
custom_styles/disabled = SubResource( 2 )
disabled = true

[node name="Sprite" type="AnimatedSprite" parent="Page2/IcoBG"]
position = Vector2( 8, 8 )
scale = Vector2( 0.8125, 0.8125 )
frames = SubResource( 3 )
centered = false

[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot1" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot2" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot3" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot4" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot5" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot6" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot7" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot8" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot9" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/Items/ItemSlot10" to="." method="_on_ItemSlot_pressed"]
[connection signal="pressed" from="Page1/NextPage" to="." method="_on_NextPage_pressed"]
[connection signal="pressed" from="Page1/PrevPage" to="." method="_on_PrevPage_pressed"]
[connection signal="pressed" from="Page2/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Page2/Use" to="." method="_on_Use_pressed"]
